@@ -688,51 +688,6 @@ return|return
 name|readerPooling
 return|;
 block|}
-comment|/** Expert: sets the {@link DocConsumer} chain to be used to process documents.    *    *<p>Only takes effect when IndexWriter is first created. */
-DECL|method|setIndexingChain
-name|IndexWriterConfig
-name|setIndexingChain
-parameter_list|(
-name|IndexingChain
-name|indexingChain
-parameter_list|)
-block|{
-if|if
-condition|(
-name|indexingChain
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"indexingChain must not be null"
-argument_list|)
-throw|;
-block|}
-name|this
-operator|.
-name|indexingChain
-operator|=
-name|indexingChain
-expr_stmt|;
-return|return
-name|this
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getIndexingChain
-name|IndexingChain
-name|getIndexingChain
-parameter_list|()
-block|{
-return|return
-name|indexingChain
-return|;
-block|}
 comment|/**    * Expert: Controls when segments are flushed to disk during indexing.    * The {@link FlushPolicy} initialized during {@link IndexWriter} instantiation and once initialized    * the given instance is bound to this {@link IndexWriter} and should not be used with another writer.    * @see #setMaxBufferedDeleteTerms(int)    * @see #setMaxBufferedDocs(int)    * @see #setRAMBufferSizeMB(double)    */
 DECL|method|setFlushPolicy
 name|IndexWriterConfig
